src/Tests/Error/DirectoryDoNotExistsError.php
<?php

namespace ColdBolt\Tests\Error;

use ColdBolt\Tests\Error\AssertError;

class DirectoryDoNotExistsError extends AssertError
{
}
